# DarkSubspace

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DATA.md  LICENSE  Makefile  PROTOCOL_DISCLOSURE.md  README.md  pyproject.toml  requirements-lock.txt
.github/workflows/: verify.yml
manuscript/: NEW_REFERENCES.bib  PREREGISTRATION.md  appendix.tex  intro.tex  main.tex  methods.tex  paper_map.yaml  references.bib  results.tex
paper5/: ARTIFACT_README.md  NEW_REFERENCES.bib  PREREGISTRATION.md  algorithm.sty  algorithmic.sty  appendix.tex  fancyhdr.sty  icml2026.bst  icml2026.sty  intro.tex  main.tex  methods.tex  paper_map.yaml  references.bib  related.tex  results.tex
paper5/results/: cohort_bootstrap.json  heldout_dk.json
results/dark_subspace/paper_claims/: cohort_bootstrap.json  double_dissociation.json  extraction_detection_separation.json  fsc_values.json  heldout_dk.json  k_oc2_bootstrap_residual_minus_reconstruction_2026-05-05.json  p69_member_only_n5.json  p69_n5_harmonized_2026-05-06.json  p69_n6_complete.json  p69_seed42_pre_vs_postfix.json  (+2 more)
scripts/dark_subspace/: README.md  _bootstrap.py  aggregate_multiseed.py  aggregate_topk_scope.py  baseline_attacks_suite.py  bcd_extractability_predictor.py  behavioral_channels.py  bow_ceiling.py  build_disjoint_owt_corpus.py  dd_table_render.py  extract_canonical_activations.py  feature_ablation_dark_subspace.py  feature_ablation_random_k.py  figure_data_loader.py  finetune_sae_dk.py  fresh_probe_test.py  frikha_baseline_ablation.py  frikha_n5_aggregate.py  fsc_random_null.py  heldout_dk_eval.py  l2_normalized_auroc.py  label_shuffled_null.py  length_baseline.py  make_random_sae.py  make_residual_audit_overview.py  nonlinear_probe.py  norm_baseline.py  p12b_multiseed_query.py  p69_n5_harmonize.py  paraphrase_sensitivity.py  per_row_bootstrap_kocl2.py  per_row_bootstrap_kocl2_residual_minus_recon.py  plot_advanced_figures.py  plot_figures.py  plot_privacy_aware_comparison.py  plot_score_distributions.py  random_direction_baseline.py  recall_label_validation.py  rerun_bootstrap_cis.py  sae_dark_subspace.py  (+6 more)
scripts/memcirc/: _bootstrap.py  aggregate_multiseed.py  baseline_attacks_suite.py  bcd_extractability_predictor.py  behavioral_channels.py  bow_ceiling.py  build_disjoint_owt_corpus.py  extract_canonical_activations.py  feature_ablation_dark_subspace.py  feature_ablation_random_k.py  figure_data_loader.py  finetune_sae_dk.py  fresh_probe_test.py  fsc_random_null.py  heldout_dk_eval.py  l2_normalized_auroc.py  make_random_sae.py  norm_baseline.py  p12b_multiseed_query.py  p69_n5_harmonize.py  paraphrase_sensitivity.py  per_row_bootstrap_kocl2.py  per_row_bootstrap_kocl2_residual_minus_recon.py  plot_paper5_advanced.py  plot_paper5_figures.py  plot_privacy_aware_comparison.py  plot_score_distributions.py  random_direction_baseline.py  recall_label_validation.py  rerun_bootstrap_cis.py  sae_dark_subspace.py  sae_noise_floor_aggregate.py  standard_mia_probe_decomposition.py  subspace_ablation_eval.py  tpr_at_low_fpr.py  validate_recall_proxy.py  verify_paper5.py
scripts/shared/: eval_sae_features.py  figure_style.py  find_latest_sae.py  repo_bootstrap.py  train_sae.py
src/sae_mia_audit/: README.md  __init__.py  cli.py
tests/: README.md  test_artefact_integrity.py
(+103 files in other folders)
