[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sae-mia-audit"
version = "1.0.0"
description = "Support package for the Dark Subspace sparse-autoencoder membership-auditing artefact."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name="Niloy Purkait", email="n.purkait@tilburguniversity.edu"},
  {name="Gonzalo Nápoles"},
  {name="Emmanuel Keuleers"},
  {name="Henry Brighton"},
]
dependencies = [
  "torch>=2.2",
  "transformers>=4.41",
  "datasets>=2.19",
  "accelerate>=0.33",
  "huggingface-hub>=0.24",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "scipy>=1.12",
  "tqdm>=4.66",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.7",
  "matplotlib>=3.8",
  "einops>=0.8",
  "safetensors>=0.4",
  "sentencepiece>=0.2.0",
]

[project.optional-dependencies]
# Optional SAE tooling (ai-safety-foundation/sparse_autoencoder)
saif = [
  "sparse_autoencoder>=1.10.0",
  "torchmetrics>=1.3",
]

dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "pre-commit>=3.8.0",
  "types-PyYAML",
]

[project.scripts]
sae-mia-audit = "sae_mia_audit.cli:app"

[project.urls]
Repository = "https://github.com/NiloyPurkait/DarkSubspace"
Homepage = "https://github.com/NiloyPurkait/DarkSubspace"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
